# lunar-outpost-projects

./: README.md
additional_analysis/: garden_rover_graphs.html  garden_rover_graphs.ipynb  groundtruth.txt
code/: graph_script.py
data/: temperature_log.csv
docs/: graph_jupyter_explore.html
notebooks/: graph_jupyter_explore.ipynb
ros2/send_receive/: CMakeLists.txt  package.xml
ros2/send_receive/scripts/: prompter.py  service_server.py  temperature_logger.py
ros2/send_receive/srv/: Service.srv
